# KIE

./: encodev2.py  main.py  pyproject.toml  requirements.txt  tests.py
configs/: kie-invoice.yaml  training.yaml
kie/: __init__.py  augment.py  configs.py  const.py  data.py  fileio.py  graph_utils.py  metrics.py  models.py  predictor.py  prettyprint.py  processing.py  processor_v2.py  tokenize.py  trainer.py
kie/augments/: __init__.py  functional.py
kie/bros/: __init__.py  modeling_bros.py
kie/data/: __init__.py  loaders.py  schema.py
kie/utils/: __init__.py  download.py  functional.py
